fixed spacing of gh button

--- a/style/style.css
+++ b/style/style.css
@@ -14,7 +14,7 @@ a {
     color:#232323;
 }
 
-.twitter-share-button { width: 100px !important; }
+.twitter-share-button { width: 90px !important; }
 
 .navbar {
 	width: 80%;
